Fixed spacing in rssb

--- a/src/pages/Cases/cases.scss
+++ b/src/pages/Cases/cases.scss
@@ -169,6 +169,11 @@
     padding: unset;
   }
 
+  .rssb-text-image {
+    padding: unset;
+    margin-bottom: 70px;
+  }
+
   .momentum-footer {
     margin-top: -102px;
   }
